# be-data-extract

./: .gitignore  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
src/finn_python_server/: __init__.py
src/finn_python_server/cloud/: Dockerfile  cleanup.py  exceptions.py  func.py  func.yaml  queue_manager.py  requirements.txt
src/finn_python_server/cloud/news/: news_data.py
src/finn_python_server/cloud/stock/: stock_price_data.py
src/finn_python_server/local/: config.py  news_data_for_train.py  news_one_day.py  stock_price_one_day.py
src/finn_python_server/local-train/: config.py  news_data_for_train.py  stock_price_data_for_train.py
src/finn_python_server/local/news/: news_data.py
src/finn_python_server/local/stock/: stock_price_data.py
src/finn_python_server/news/: googlerss_tesla_news.ipynb  news_data.py
src/finn_python_server/stock/: stock_data.py  stock_price_data.py
